--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@mantine/dropzone": "^8.3.14",
     "@mantine/form": "^8.3.14",
     "@mantine/hooks": "^8.3.14",
+    "@mantine/notifications": "^8.3.14",
     "@supabase/supabase-js": "^2.95.3",
+    "@tanstack/react-query": "^5.90.21",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.19",
     "mantine-datatable": "^8.3.13",
@@ -26,6 +28,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@tanstack/eslint-plugin-query": "^5.91.4",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
